# decision-tree-from-scratch

./: README.md  pyproject.toml
decision_tree_from_scratch.egg-info/: PKG-INFO
examples/: run_rf_oob.py  train_iris_like.py  train_random_forest.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/decision_tree/: decision_tree.py  deicion_tree.py  random_forest.py  split.py
src/decision_tree_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tree/: deicion_tree.py  node.py
tests/: conftest.py  test_criteria.py  test_rf_proba.py  test_tree_proba.py  test_tree_small.py
