[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-tree-from-scratch"
version = "0.1.0"
description = "A decision tree implementation built from scratch"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.urls]
Homepage = "https://github.com/yourusername/decision-tree-from-scratch"
Repository = "https://github.com/yourusername/decision-tree-from-scratch"

[tool.setuptools]
packages = ["decision_tree"]